plugins {
	id 'java'
	id 'org.springframework.boot' version '3.2.4'
	id 'io.spring.dependency-management' version '1.1.4'
}

configurations {
	all {
		exclude group: 'commons-logging', module: 'commons-logging'
	}
}

group = 'pl.edu.pwr.pkuchnowski'
version = '1.0'

java {
	sourceCompatibility = '17'
}

repositories {
	mavenCentral()
}

dependencies {
	implementation 'org.springframework.boot:spring-boot-starter-web'
	implementation 'org.springframework.boot:spring-boot-configuration-processor'
	testImplementation 'org.springframework.boot:spring-boot-starter-test'
	implementation 'com.google.api-client:google-api-client:2.0.0'
	implementation 'com.google.oauth-client:google-oauth-client-jetty:1.34.1'
	implementation 'com.google.apis:google-api-services-script:v1-rev20220323-2.0.0'
	implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.5.0'
}

tasks.named('test') {
	useJUnitPlatform()
	jvmArgs('-XX:+EnableDynamicAgentLoading')
}

bootJar {
	archiveBaseName = 'fill-the-form-api'
	archiveVersion = '1.5'
}

javadoc {
	options {
		encoding 'UTF-8'
		charSet 'UTF-8'
		links 'https://docs.oracle.com/en/java/javase/17/docs/api/'
		title = "FillTheForm API Documentation"
		memberLevel = JavadocMemberLevel.PRIVATE
		author = true
		version = true
	}
	destinationDir = file("docs")
}


